# p-lang

./: .gitignore  CMakeLists.txt  LICENSE  TODO.txt  main.cpp  test.cpp
example/: assignment.p
include/lexer/: core.hpp  lexer.hpp
include/p/: conversions.hpp  core.hpp  exception.hpp  interpreter.hpp  lexer.hpp  parser.hpp  scope.hpp  standard.hpp  tokenizer.hpp  utils.hpp  variable.hpp
p/: flip.p  test.p
src/: conversions.cpp  interpreter.cpp  lexer.cpp  lexer.hpp  main.cpp  p.cpp  parser.cpp  scope.cpp  standard.cpp  tokenizer.cpp  utils.cpp  variable.cpp
